--- a/styles.css
+++ b/styles.css
@@ -23,17 +23,18 @@ body{
   }
 .links-primary{
     max-width: 140px;
-    padding: 0.3rem 1.2rem;
+    padding: 3px 9px;
     background-color: var(--primary-color);
     color: #fff;
     margin: 1rem auto;
     border-radius: 2rem;
     text-decoration: none;
+    font-weight: normal;
   }
 .links-secondary{
     max-width: 140px;
-    margin: 1rem;
-    padding: 0.3rem 1.2rem;
+    margin: 1rem auto;
+    padding: 3px 9px;
     border-radius: 2rem;
     border: 1px solid var(--primary-color);
     color: var(--primary-color);
@@ -53,13 +54,13 @@ body{
     max-width: 1100px;
     margin:auto;
     background-color: var(--primary-color);
-    padding:0.1rem 0.5rem;
+    padding:1px 2px;
     color:white;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
 }
 .navigation .web-developer{
-    padding-top: 0.5rem;
+    padding: 10px 10px;
     font-weight: bold;
     font-size: 1.1rem;
 } 
@@ -80,8 +81,9 @@ body{
     text-align:center
 }
 .header .header-img{
-    max-width:800px;
-    margin:auto;
+    width: 100%;
+    max-width: 00px;
+    height: auto;
 }
 .header .header-heading{
     background-color: var(--primary-color);
@@ -163,4 +165,46 @@ body{
 .footer .link{
     color: white;
     padding:0.1rem 0.1rem
+}
+/*Blog page header*/
+
+.header-heading{
+    background-color: var(--primary-color);
+    padding:0.5rem 0.5rem;
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 0.5rem 0.5rem;
+    max-width: 900px;
+    font-family:sans-serif;
+    font-weight:bold;
+    color:white
+}
+.section-blog {
+    padding: 1rem 0.2rem;
+    background-color: var(--dark-color);
+    text-align:center;
+    max-width: 900px;
+    margin:3rem auto;
+    border-radius: 0.5rem 0.5rem;
+}
+/*Bolg Format*/
+.Front{
+    padding: 0.2rem 0.2rem;
+    text-align:justify;
+    max-width: 800px;
+    margin-top:2rem;
+    margin-bottom: 2rem;
+    margin-left: auto;
+    margin-right:auto;
+    border-radius: 0.5rem 0.5rem;
+    font-size: 20px;
+}
+.Front .Bold{
+    text-align: center;
+}
+.Para{
+    color: var(--primary-color);
 }
