--- a/styles.css
+++ b/styles.css
@@ -151,23 +151,23 @@ body{
     max-width: 900px;
     padding:1rem;
     margin: auto;
-    text-align:center;
-
+    text-align: center;
+    border-top-right-radius:1rem;
+    border-top-left-radius:1rem;
 
 }
 .footer .footer-header{
     color:white;
     font-size: 20px;
+
 }
 .footer .footer-header .social-links{
-    color:white
+    color:white;
 }
 .footer .link{
     color: white;
-    padding:0.1px 0.1px;
     text-decoration: none;
     font-weight: bolder;
-    
 }
 /*Blog page header*/
 
