--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Roboto:wght@300&display=swap');
 :root {
    --primary-color:#00008b;
    --dark-color: #b9b8b84d;
    --off-white: #ffffffa4;
 }
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+font-family: 'Roboto', sans-serif;
 }
 .container {
     padding-left: 1rem;
@@ -45,14 +46,14 @@ body{
 }
 .list-item-inline {
     display: inline;
-    padding: 0rem 0.5rem;
+    padding: 0rem 0.2rem;
 }
 
 /**Navigation**/
 
 .navigation{
-    max-width: 1100px;
-    margin:auto;
+    max-width:100%;
+    margin:0px;
     background-color: var(--primary-color);
     padding:1px 2px;
     color:white;
@@ -144,11 +145,11 @@ body{
 }
 
 
-/*foote*/
+/*footer*/
 
 .footer{
     background-color:var(--primary-color);
-    max-width: 900px;
+    max-width: 100%;
     padding: 0.5rem 0.5rem;
     margin: auto;
     border-top-right-radius:1rem;
