--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
 }
 body{
     font-family: 'Montserrat', sans-serif;
-font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    margin: 0%;
 }
 .container {
     padding-left: 1rem;
